--- a/frontend/culendar/package.json
+++ b/frontend/culendar/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@noble/ciphers": "latest",
     "@noble/curves": "latest",
+    "@web3modal/wagmi": "latest",
+    "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@shadcn/ui": "^0.0.4",
+    "@web3modal/ethers": "^4.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ethers": "^6.12.1",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "react": "^18",
