--- a/frontend/culendar/package.json
+++ b/frontend/culendar/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@noble/ciphers": "latest",
     "@noble/curves": "latest",
-    "@web3modal/wagmi": "latest",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@shadcn/ui": "^0.0.4",
     "@web3modal/ethers": "^4.2.2",
+    "@web3modal/wagmi": "latest",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.3",
     "ethers": "^6.12.1",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
